--- a/video-generator/render.yaml
+++ b/video-generator/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: web
     name: ai-video-generator
     env: python
-    buildCommand: pip install -r video-generator/requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: python video-generator.py
     plan: free
